a minor revision of the prototype-3-func-and-nav introduction

--- a/prototype-3-func-and-nav/README.adoc
+++ b/prototype-3-func-and-nav/README.adoc
@@ -86,6 +86,6 @@ a semantic graph supporting _triple store_ in a web browser!#
 
 This mock-up website...
 
-* provides concrete test-bed
-* for evolving the *functionality &amp; navigation* aspects of our eventual website, and
+* provides concrete test-bed for evolving the *functionality &amp; navigation* aspects
+of our eventual website, and
 * forces us to think about architectural trade-offs.
