--- a/README.adoc
+++ b/README.adoc
@@ -15,3 +15,4 @@ Short investigations, experiments, etc.
 1. link:waste-quants-thru-time-on-a-map/[Waste quantities through time, on a map]
 1. link:longannet-found-in-the-data/[How I chanced upon Longannet in the data]
 1. link:cluster-map-of-materials-incoming/[Waste sites and the quantities of incoming materials]
+1. link:prototype-3-func-and-nav/[A mock-up website for functionality & navigation]
