--- a/regional-dashboard/README.adoc
+++ b/regional-dashboard/README.adoc
@@ -14,7 +14,7 @@ about waste.
 
 The prototype is a webapp and it can be accessed https://data-commons-scotland.github.io/regional-dashboards/#/dashboard[*here*].
 
-image:the-dashboard.png["our prototype regional dashboard", width="95%", link="https://data-commons-scotland.github.io/regional-dashboards/"]
+image:the-dashboard.png["our prototype regional dashboard", width="95%", link="https://data-commons-scotland.github.io/regional-dashboards/#/regional-dashboard"]
 
 == Curiosities
 
