--- a/README.adoc
+++ b/README.adoc
@@ -17,3 +17,5 @@ Short investigations, experiments, etc.
 1. link:cluster-map-of-materials-incoming/[Waste sites and the quantities of incoming materials]
 1. link:prototype-3-func-and-nav/[A mock-up website for functionality & navigation]
 1. link:regional-dashboard/["_How is waste_ in my area?" - a regional dashboard]
+1. link:stirling-bins-revisited/[Stirling's bin collection data - revisited]
+1. link:architecture-revisited/[The prototype's architecture - revised]
