--- a/README.adoc
+++ b/README.adoc
@@ -18,4 +18,4 @@ Short investigations, experiments, etc.
 1. link:prototype-3-func-and-nav/[A mock-up website for functionality & navigation]
 1. link:regional-dashboard/["_How is waste_ in my area?" - a regional dashboard]
 1. link:stirling-bins-revisited/[Stirling's bin collection data - revisited]
-1. link:architecture-revisited/[The prototype's architecture - revised]
+1. link:architecture-revised/[The prototype's architecture - revised]
