--- a/regional-dashboard/README.adoc
+++ b/regional-dashboard/README.adoc
@@ -12,9 +12,9 @@ which is directly powered by our
 https://github.com/data-commons-scotland/dcs-easier-open-data['easier datasets']
 about waste.
 
-The prototype is a webapp and it can be accessed https://data-commons-scotland.github.io/regional-dashboards/#/dashboard[*here*].
+The prototype is a webapp and it can be accessed https://data-commons-scotland.github.io/prototype-6/#/regional-dashboard[*here*].
 
-image:the-dashboard.png["our prototype regional dashboard", width="95%", link="https://data-commons-scotland.github.io/regional-dashboards/#/regional-dashboard"]
+image:the-dashboard.png["our prototype regional dashboard", width="95%", link="https://data-commons-scotland.github.io/prototype-6/#/regional-dashboard"]
 
 == Curiosities
 
