--- a/stirling-bins-revisited/README.adoc
+++ b/stirling-bins-revisited/README.adoc
@@ -9,7 +9,7 @@ e.g. by adding spatial data to describe collection routes.
 However, we can still squeeze from its current version,
 several interesting pieces of information.
 For details, visit the
-https://data-commons-scotland.github.io/regional-dashboards/#/stirling-bin-collection[Stirling bin collection page]
+https://data-commons-scotland.github.io/prototype-6/#/stirling-bin-collection[Stirling bin collection page]
 on our website mockup.
 
-image:Stirling-bin-collection-mockup-page-v3.png["The Stirling bin collection page on our website mockup", width="95%", link="https://data-commons-scotland.github.io/regional-dashboards/#/stirling-bin-collection"]
+image:Stirling-bin-collection-mockup-page-v3.png["The Stirling bin collection page on our website mockup", width="95%", link="https://data-commons-scotland.github.io/prototype-6/#/stirling-bin-collection"]
