An intermediate check-in

--- a/carbon-savings/README.adoc
+++ b/carbon-savings/README.adoc
@@ -254,7 +254,7 @@ for publication as *open data* without further augmentation.
 
 ===  Implicit → explicit 
 
-TODO
+TODO...
 
 we have rectify the inconsistenciess, mapped text values to cannocical (implicitly shared) code lists, standardised numeric and date values 
 
